log
Fri, May 16, 2025  7:32:35 PM: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:9: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if (is_final(n)) return lista;
         ^~~~~~~~
sudoku.c:58:18: error: unused variable 'l' [-Werror=unused-variable]
     int i, j, k, l;
                  ^
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  7:32:58 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:9: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if (is_final(n)) return lista;
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
a429edd
Fri, May 16, 2025  7:33:15 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5a7ad99
Fri, May 16, 2025  7:47:46 PM: 
 sudoku.c | 49 +++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 47 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:58:20: error: variable 'colu' set but not used [-Werror=unused-but-set-variable]
     int filas[10], colu[10], sub[10];
                    ^~~~
sudoku.c: In function 'get_adj_nodes':
sudoku.c:101:9: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if (is_final(n)) return lista;
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
9d34495
Fri, May 16, 2025  7:47:56 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:58:20: error: variable 'colu' set but not used [-Werror=unused-but-set-variable]
     int filas[10], colu[10], sub[10];
                    ^~~~
cc1.exe: all warnings being treated as errors
dcd9897
Fri, May 16, 2025  7:48:38 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4a26d80
Fri, May 16, 2025  7:49:56 PM: 
 sudoku.c | 43 ++++++++++++++++++++++++++-----------------
 1 file changed, 26 insertions(+), 17 deletions(-)
 tests:  6|2
total_score: 45/70
9dbb940
Fri, May 16, 2025  7:56:02 PM: 
 sudoku.c | 30 +++++++++++-------------------
 1 file changed, 11 insertions(+), 19 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:95:9: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if (is_final(n)) return lista;
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
342b658
Fri, May 16, 2025  7:56:33 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
c1a06bc
Fri, May 16, 2025  8:07:35 PM: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  0|0
a18bb62
